// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb filter React.Fragment 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-breadcrumb"
  >
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        Location
      </span>
    </span>
    <span
      class="dcloud-breadcrumb-separator"
    >
      :
    </span>
    <span>
      <a
        class="dcloud-breadcrumb-link"
        href=""
      >
        Application Center
      </a>
    </span>
    <span
      class="dcloud-breadcrumb-separator"
    >
      /
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Breadcrumb rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-breadcrumb dcloud-breadcrumb-rtl"
  />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Breadcrumb should accept undefined routes 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-breadcrumb"
  />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Breadcrumb should allow Breadcrumb.Item is null or undefined 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-breadcrumb"
  >
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        Home
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Breadcrumb should not display Breadcrumb Item when its children is falsy 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-breadcrumb"
  >
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        xxx
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        yyy
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Breadcrumb should render a menu 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-breadcrumb"
  >
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        <a
          href="#/index"
        >
          home
        </a>
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="dcloud-dropdown-trigger dcloud-breadcrumb-overlay-link"
      >
        <span
          class="dcloud-breadcrumb-link"
        >
          <a
            href="#/index/first"
          >
            first
          </a>
        </span>
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        <a
          href="#/index/first/second"
        >
          second
        </a>
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        <span />
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Breadcrumb should support Breadcrumb.Item default separator 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-breadcrumb"
  >
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        Location
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span>
        <span
          class="dcloud-breadcrumb-link"
        >
          Mock Node
        </span>
        <span
          class="dcloud-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </span>
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        Application Center
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Breadcrumb should support React.Fragment and falsy children 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-breadcrumb"
  >
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        yyy
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        yyy
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        yyy
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
    0
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Breadcrumb should support custom attribute 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-breadcrumb"
    data-custom="custom"
  >
    <span>
      <span
        class="dcloud-breadcrumb-link"
        data-custom="custom-item"
      >
        xxx
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        class="dcloud-breadcrumb-link"
      >
        yyy
      </span>
      <span
        class="dcloud-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
